--- a/test_tf.ipynb
+++ b/test_tf.ipynb
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "batch_size = 1000\n",
+    "batch_size = 1176\n",
     "\n",
     "train_ds = df_to_dataset(train, batch_size=batch_size)\n",
     "val_ds = df_to_dataset(val, shuffle=False, batch_size=batch_size)\n",
@@ -315,8 +315,8 @@
     "# header_continous = ['Age', 'DailyRate', 'DistanceFromHome', 'HourlyRate', 'MonthlyIncome', 'MonthlyRate', 'PercentSalaryHike', 'TotalWorkingYears', 'YearsAtCompany', 'YearsInCurrentRole', 'YearsSinceLastPromotion', 'YearsWithCurrManager']\n",
     "# header_categorical = ['Attrition', 'BusinessTravel', 'Department', 'Education','EducationField','EnvironmentSatisfaction','Gender','JobInvolvement','JobLevel','JobRole','JobSatisfaction','MaritalStatus','NumCompaniesWorked', 'OverTime','PerformanceRating', 'RelationshipSatisfaction', 'StockOptionLevel','TrainingTimesLastYear', 'WorkLifeBalance']\n",
     "# optimized data\n",
-    "header_continous = ['Age', 'DailyRate', 'DistanceFromHome', 'MonthlyIncome', 'PercentSalaryHike', 'TotalWorkingYears', 'YearsAtCompany', 'YearsInCurrentRole', 'YearsSinceLastPromotion', 'YearsWithCurrManager']\n",
-    "header_categorical = ['Attrition', 'BusinessTravel', 'Department', 'Education','EducationField','EnvironmentSatisfaction','Gender','JobInvolvement','JobLevel','JobRole','JobSatisfaction','MaritalStatus', 'OverTime','PerformanceRating', 'RelationshipSatisfaction', 'StockOptionLevel','TrainingTimesLastYear', 'WorkLifeBalance']"
+    "header_continous = ['DistanceFromHome', 'MonthlyIncome', 'TotalWorkingYears', 'YearsAtCompany', 'YearsInCurrentRole', 'YearsSinceLastPromotion', 'YearsWithCurrManager']\n",
+    "header_categorical = ['Attrition', 'BusinessTravel','EnvironmentSatisfaction','Gender','JobInvolvement','JobLevel','JobSatisfaction', 'OverTime','PerformanceRating', 'RelationshipSatisfaction', 'StockOptionLevel']"
    ]
   },
   {
@@ -356,6 +356,9 @@
    "source": [
     "all_inputs = []\n",
     "encoded_features = []\n",
+    "encoded_numerical = []\n",
+    "encoded_categorical = []\n",
+    "encoded_survey = []\n",
     "\n",
     "# Numerical features.\n",
     "for header in header_continous:\n",
@@ -539,6 +542,31 @@
    ],
    "source": [
     "model.save('job_satisfaction_classifier')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow_decision_forests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [120], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_decision_forests\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtfdf\u001b[39;00m\n\u001b[0;32m      3\u001b[0m model_rf \u001b[39m=\u001b[39m tfdf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mRandomForestModel(verbose\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m      5\u001b[0m model_rf\u001b[39m.\u001b[39mfit(x\u001b[39m=\u001b[39mds_train)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow_decision_forests'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow_decision_forests as tfdf\n",
+    "\n",
+    "model_rf = tfdf.keras.RandomForestModel(verbose=2)\n",
+    "\n",
+    "model_rf.fit(x=ds_train)"
    ]
   }
  ],
