cleanup, added sections

--- a/all_classifiers.ipynb
+++ b/all_classifiers.ipynb
@@ -390,17 +390,7 @@
     "JSat_validation = JSat[1200:]\n",
     "# --------------------------------------------------------------------------------------------------\n",
     "\n",
-    "# from sklearn.linear_model import LogisticRegression\n",
-    "# from sklearn.tree import DecisionTreeClassifier\n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
-    "# from sklearn.naive_bayes import GaussianNB\n",
-    "# from sklearn.svm import SVC\n",
-    "# from sklearn.ensemble import AdaBoostClassifier\n",
-    "\n",
     "all_clfs_names, all_clfs_clf = getClassifiers()\n",
-    "\n",
-    "a = df_training_categorical.nunique()\n",
     "\n",
     "log_reg_params = [{\"C\":0.01}, {\"C\":0.1}, {\"C\":1}, {\"C\":10}]\n",
     "dec_tree_params = [{\"criterion\": \"gini\"}, {\"criterion\": \"entropy\"}]\n",
@@ -564,7 +554,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize plots by different model parameters"
+    "# visualize plots by different model parameters\n",
+    "plt_models_by_clf = []\n",
+    "for model_name, model_class, model_params, model_score in insights:\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -573,7 +567,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pick best accuracy models and compare them to the rest"
+    "# pick best accuracy models and compare them to the rest\n",
+    "plt_model_best = []\n",
+    "_count = 0\n",
+    "for model_name, model_class, model_params, model_score in insights:\n",
+    "    if not model_name in plt_model_best:\n",
+    "        plt_model_best.append({\"name\": model_name, \"parameters\": model_params, \"accuracy\": model_score})\n",
+    "    else:\n",
+    "        for best_name, best_parameters, best_accuracy in plt_model_best:\n",
+    "            _count = _count + 1\n",
+    "            if best_name == model_name:\n",
+    "                if best_accuracy < model_score:\n",
+    "                    plt_model_best[_count][\"parameters\"] = model_params\n",
+    "                    plt_model_best[_count][\"accuracy\"] = model_score\n",
+    "                if best_accuracy == model_score:\n",
+    "                    plt_model_best[_count][\"parameters\"] = best_parameters + model_params\n",
+    "\n",
+    "                    \n"
    ]
   }
  ],
