--- a/all_classifiers.ipynb
+++ b/all_classifiers.ipynb
@@ -105,8 +105,8 @@
     "{'name':'AdaBoostClassifier', 'params': [[{\"n_estimators\":100}, {\"n_estimators\":50}, {\"n_estimators\":200}],[{\"random_state\":None}],[{\"learning_rate\":0.1}, {\"learning_rate\":1}, {\"learning_rate\":10}, {\"learning_rate\":100}]]}, # can implement estimator = any decisiion tree classifier with params... default = DecisionTreeClassifier(max_depth=1)\n",
     "{'name':'BaggingClassifier', 'params': [[{\"n_estimators\":100}, {\"n_estimators\":50}, {\"n_estimators\":200}, {\"n_estimators\":10}, {\"n_estimators\":5}],[{\"max_samples\": 1.0},{\"max_samples\": 2.0},{\"max_samples\": 0.1},{\"max_samples\": 0.5},{\"max_samples\": 1},{\"max_samples\": 10}],[{\"max_features\": 1.0},{\"max_features\": 2.0},{\"max_features\": 2.5},{\"max_features\": 10}],[{\"bootstrap\": False}, {\"bootstrap\": True}]]}, # same as above\n",
     "{'name':'BernoulliNB', 'params': [[{\"alpha\": 1.0}, {\"alpha\": 100.0}, {\"alpha\": 1e-12}, {\"alpha\": 1e-6}, {\"alpha\": 1e-3}],[{\"force_alpha\": True}, {\"force_alpha\": False}], [{\"binarize\": None}, {\"binarize\": 0.0}, {\"binarize\": 1.0}, {\"binarize\": 2.5}, {\"binarize\": 5.0}], [{\"fit_prior\": True}, {\"fit_prior\": False}]]},\n",
-    "{'name':'CalibratedClassifierCV', 'params': [[{}],[{}]]},\n",
-    "{'name':'CategoricalNB', 'params': [[{}],[{}]]},\n",
+    "{'name':'CalibratedClassifierCV', 'params': [[{'method':'sigmoid'}, {'method:':'isotonic'}] ,[{\"cv\": None}, {\"cv\": 1}, {\"cv\": 3}, {\"cv\": 10}]]},\n",
+    "{'name':'CategoricalNB', 'params': [[{\"fit_prior\": True}, {\"fit_prior\": False}],[{\"alpha\": 0}, {\"alpha\": 1}, {\"alpha\": 3}, {\"alpha\": 5}]]},\n",
     "{'name':'ComplementNB', 'params': [[{}],[{}]]},\n",
     "{'name':'DecisionTreeClassifier', 'params': [[{}],[{}]]},\n",
     "{'name':'DummyClassifier', 'params': [[{}],[{}]]},\n",
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
