--- a/test_tf.ipynb
+++ b/test_tf.ipynb
@@ -8,17 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,30 +16,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "df = pd.read_csv(r'data/data_processed.csv')\n",
-    "df_continous = pd.read_csv(r'data/data_continous.csv')\n",
-    "df_categorical = pd.read_csv(r'data/data_categorical.csv')\n",
+    "df_cat = pd.read_csv(r'data/data_categorical.csv')\n",
     "\n",
-    "# --------------------------------------------------------------------------------------------------\n",
-    "# copying job satisfaction into new array\n",
-    "JSat = df['JobSatisfaction'].values\n",
+    "df_good = pd.concat([df_cat, df[\"MonthlyIncome\"], df[\"BusinessTravel\"], df[\"StockOptionLevel\"], df[\"DistanceFromHome\"]], axis=1)\n",
     "\n",
-    "# splitting inputs by row index\n",
-    "# continous data\n",
-    "df_training_continous = df_continous.iloc[:1200,:]\n",
-    "df_validation_continous = df_continous.iloc[1200:,:]\n",
-    "# categorical data\n",
-    "df_training_categorical = df_categorical.iloc[:1200,:]\n",
-    "df_validation_categorical = df_categorical.iloc[1200:,:]\n",
-    "# splitting outputs by number\n",
-    "JSat_training = JSat[:1200]\n",
-    "JSat_validation = JSat[1200:]\n",
-    "# --------------------------------------------------------------------------------------------------"
+    "# print(df_good)\n",
+    "# copy attrition and drop from dataframe\n",
+    "JAtt = df[\"Attrition\"].values\n",
+    "\n",
+    "df_good = df_good.drop([\"Unnamed: 0\"], axis=1)\n",
+    "# df_good = df_good.drop(['Attrition'], axis=1)\n",
+    "# print(df_good)\n",
+    "\n",
+    "# splitting new df\n",
+    "df_train = df_good.iloc[:1200,:]\n",
+    "df_val = df_good.iloc[1200:,:]\n",
+    "# splitting Jatt into new sizes\n",
+    "JAtt_train = JAtt[:1200]\n",
+    "JAtt_val = JAtt[1200:]"
    ]
   },
   {
@@ -62,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +67,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       1.00      1.00      1.00        55\n",
-      "           2       1.00      1.00      1.00        60\n",
-      "           3       1.00      1.00      1.00        78\n",
-      "           4       1.00      1.00      1.00        77\n",
+      "           0       0.84      0.99      0.91       221\n",
+      "           1       0.73      0.16      0.27        49\n",
       "\n",
-      "    accuracy                           1.00       270\n",
-      "   macro avg       1.00      1.00      1.00       270\n",
-      "weighted avg       1.00      1.00      1.00       270\n",
+      "    accuracy                           0.84       270\n",
+      "   macro avg       0.78      0.57      0.59       270\n",
+      "weighted avg       0.82      0.84      0.79       270\n",
       "\n"
      ]
     }
@@ -88,21 +82,15 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# continous data classifier\n",
-    "clf_continous = RandomForestClassifier(max_depth=None, random_state=None)\n",
-    "\n",
-    "clf_continous.fit(df_training_continous,JSat_training)\n",
-    "acc_continous = clf_continous.score(df_validation_continous, JSat_validation)\n",
-    "\n",
     "# categorical data classifier\n",
-    "clf_categorical = RandomForestClassifier(max_depth=None, random_state=None)\n",
+    "clf = RandomForestClassifier(max_depth=None, random_state=None)\n",
     "\n",
-    "clf_categorical.fit(df_training_categorical,JSat_training)\n",
-    "acc_categorical = clf_categorical.score(df_validation_categorical, JSat_validation)\n",
+    "clf.fit(df_train, JAtt_train)\n",
+    "acc_clf = clf.score(df_val, JAtt_val)\n",
     "\n",
-    "pred = clf_categorical.predict(df_validation_categorical)\n",
+    "pred = clf.predict(df_val)\n",
     "\n",
-    "print(classification_report(JSat_validation, pred))"
+    "print(classification_report(JAtt_val, pred))"
    ]
   },
   {
@@ -114,22 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Continous data accuracy:  0.26296296296296295\n",
-      "Categorical data accuracy:  1.0\n"
+      "Data accuracy:  0.837037037037037\n"
      ]
     }
    ],
    "source": [
     "# print results\n",
-    "print('Continous data accuracy: ', acc_continous)\n",
-    "print('Categorical data accuracy: ', acc_categorical)\n",
+    "print('Data accuracy: ', acc_clf)\n",
     "\n",
     "# print(allColumnsNames)"
    ]
@@ -143,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +150,7 @@
     "from tensorflow.keras import layers\n",
     "\n",
     "# split data into training, validation and test\n",
-    "train, val, test = np.split(df.sample(frac=1), [int(0.8*len(df)), int(0.9*len(df))])\n",
+    "train, val, test = np.split(df_good.sample(frac=1), [int(0.8*len(df_good)), int(0.9*len(df_good))])\n",
     "\n",
     "print(len(train), 'training examples')\n",
     "print(len(val), 'validation examples')\n",
@@ -173,29 +159,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Every feature: ['Unnamed: 0', 'Age', 'Attrition', 'BusinessTravel', 'DailyRate', 'Department', 'DistanceFromHome', 'Education', 'EducationField', 'EnvironmentSatisfaction', 'Gender', 'HourlyRate', 'JobInvolvement', 'JobLevel', 'JobRole', 'JobSatisfaction', 'MaritalStatus', 'MonthlyIncome', 'MonthlyRate', 'NumCompaniesWorked', 'OverTime', 'PercentSalaryHike', 'PerformanceRating', 'RelationshipSatisfaction', 'StockOptionLevel', 'TotalWorkingYears', 'TrainingTimesLastYear', 'WorkLifeBalance', 'YearsAtCompany', 'YearsInCurrentRole', 'YearsSinceLastPromotion', 'YearsWithCurrManager']\n",
-      "A batch of job satisfaction: tf.Tensor(\n",
-      "[[4]\n",
-      " [3]\n",
-      " [1]\n",
-      " [2]\n",
-      " [1]], shape=(5, 1), dtype=int64)\n",
-      "A batch of targets: tf.Tensor([0 0 1 0 0], shape=(5,), dtype=int64)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\siman\\AppData\\Local\\Temp\\ipykernel_13416\\2083902095.py:4: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+      "C:\\Users\\siman\\AppData\\Local\\Temp\\ipykernel_936\\24500874.py:5: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
       "  _df = {key: value[:,tf.newaxis] for key, value in dataframe.items()}\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'target' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [13], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m   ds \u001b[39m=\u001b[39m ds\u001b[39m.\u001b[39mprefetch(batch_size)\n\u001b[0;32m     11\u001b[0m   \u001b[39mreturn\u001b[39;00m ds\n\u001b[1;32m---> 13\u001b[0m ds_train \u001b[39m=\u001b[39m df_to_dataset(train, \u001b[39mTrue\u001b[39;49;00m, \u001b[39m5\u001b[39;49m)\n\u001b[0;32m     15\u001b[0m [(train_features, label_batch)] \u001b[39m=\u001b[39m ds_train\u001b[39m.\u001b[39mtake(\u001b[39m1\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mEvery feature:\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mlist\u001b[39m(train_features\u001b[39m.\u001b[39mkeys()))\n",
+      "Cell \u001b[1;32mIn [13], line 6\u001b[0m, in \u001b[0;36mdf_to_dataset\u001b[1;34m(dataframe, shuffle, batch_size)\u001b[0m\n\u001b[0;32m      4\u001b[0m   target \u001b[39m=\u001b[39m _df\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39mAttrition\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m _df \u001b[39m=\u001b[39m {key: value[:,tf\u001b[39m.\u001b[39mnewaxis] \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m dataframe\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m----> 6\u001b[0m ds \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataset\u001b[39m.\u001b[39mfrom_tensor_slices((\u001b[39mdict\u001b[39m(_df), target))\n\u001b[0;32m      7\u001b[0m \u001b[39mif\u001b[39;00m shuffle:\n\u001b[0;32m      8\u001b[0m   ds \u001b[39m=\u001b[39m ds\u001b[39m.\u001b[39mshuffle(buffer_size\u001b[39m=\u001b[39m\u001b[39mlen\u001b[39m(dataframe))\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'target' referenced before assignment"
      ]
     }
    ],
@@ -203,6 +187,7 @@
     "def df_to_dataset(dataframe, shuffle=True, batch_size=32):\n",
     "  _df = dataframe.copy()\n",
     "  target = _df.pop('Attrition')\n",
+    "\n",
     "  _df = {key: value[:,tf.newaxis] for key, value in dataframe.items()}\n",
     "  ds = tf.data.Dataset.from_tensor_slices((dict(_df), target))\n",
     "  if shuffle:\n",
@@ -215,7 +200,7 @@
     "\n",
     "[(train_features, label_batch)] = ds_train.take(1)\n",
     "print('Every feature:', list(train_features.keys()))\n",
-    "print('A batch of job satisfaction:', train_features[\"JobSatisfaction\"])\n",
+    "print('A batch of job JobSatisfaction:', train_features[\"JobSatisfaction\"])\n",
     "print('A batch of targets:', label_batch )"
    ]
   },
@@ -762,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
